# wellness-app-ai

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.aws/: task-definition-ai.json
.trae/documents/: WellnessApp_AI_API.md  WellnessApp_AI_Architecture.md  WellnessApp_AI_Development_Log.md  WellnessApp_AI_PRD.md
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  advice.py  chat.py  health.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/prompts/: advice.py  chat.py
app/providers/: base.py  deepseek.py  ollama.py
app/rag/: __init__.py  chunker.py  document_loader.py  index_manager.py  retriever.py
app/schemas/: advice.py  chat.py  common.py
app/services/: advice.py  chat.py  safety.py
docs/superpowers/plans/: 2026-06-27-ai-service-foundation.md  2026-06-28-local-knowledge-rag.md
docs/superpowers/specs/: 2026-06-27-ai-service-foundation-design.md  (+1 more)
knowledge/: README.md
tests/: conftest.py  fakes.py  test_documentation.py  test_repository_hygiene.py
tests/api/: test_advice.py  test_chat.py  test_errors.py  test_health.py
tests/core/: test_config.py  test_exceptions.py  test_logging.py
tests/integration/: __init__.py  test_live_deepseek.py
tests/providers/: test_base.py  test_deepseek.py  test_ollama.py
tests/rag/: test_chunker.py  test_document_loader.py  test_index_manager.py  test_retriever.py
tests/schemas/: test_advice.py  test_chat.py
tests/services/: test_advice.py  test_chat.py  test_safety.py
